--- a/.github/workflows/helloFlow.yml
+++ b/.github/workflows/helloFlow.yml
@@ -1,5 +1,7 @@
 name: HelloFlow
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: '*/5 * * * *'
 jobs:
   first-job:
     runs-on: ubuntu-latest
