--- a/.github/workflows/helloFlow.yml
+++ b/.github/workflows/helloFlow.yml
@@ -1,7 +1,7 @@
 name: HelloFlow
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: '*/5 * * * *'
 jobs:
   first-job:
     runs-on: ubuntu-latest
